fix: overflow hidden para evitar nombres de auttores demasiado largos

--- a/frontend/css/estilos.css
+++ b/frontend/css/estilos.css
@@ -518,8 +518,12 @@ body {
 }
 
 #contenedorLibros .libroCard__autor {
+  display: -webkit-box;
   font-size: 0.88rem;
   color: #777;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
 
 
@@ -1228,6 +1232,10 @@ body {
 #contenedorFavoritos .libroCard__autor {
   font-size: 0.88rem;
   color: #777;
+  display: -webkit-box;
+  -webkit-line-clamp: 3; 
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
  
 .btnEliminarFavorito {
